Fixed spacing on get to know us images

--- a/css/style.css
+++ b/css/style.css
@@ -70,22 +70,33 @@ h3 {
     grid-template-areas: 
         "img1 . img2"
         "img1 . img2"
-        ".    . ."
         "img3 . img4"
         "img3 . img4"
     ;
 }
 #img1 {
     grid-area: img1;
+    background-image: url(../images/gtk-1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 #img2 {
     grid-area: img2;
+    background-image: url(../images/gtk-2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 #img3 {
     grid-area: img3;
+    background-image: url(../images/gtk-3.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 #img4 {
     grid-area: img4;
+    background-image: url(../images/gtk-4.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .img-div {
     width: 20vw;
